--- a/src/views/modules/navbar/_navbar-bottom.pug
+++ b/src/views/modules/navbar/_navbar-bottom.pug
@@ -2,7 +2,7 @@
 nav.navbar.fixed-bottom.bg-transparent
   .container-fluid.px-3
     .navbar-b-left
-      include ../../includes/misc/_cc-settings
+      //- include ../../includes/misc/_cc-settings
 
     .navbar-b-right.d-inline-flex
       include ../../includes/misc/_get-in-touch
