--- a/src/views/partials/_scripts.pug
+++ b/src/views/partials/_scripts.pug
@@ -3,8 +3,8 @@ block external-js
   //--- Adorade JS Files, external scripts here (cdn)
   script#vendors(defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous")
-  script#cc-script(defer src="https://cdn.jsdelivr.net/npm/vanilla-cookieconsent@3.0.1/dist/cookieconsent.umd.min.js"
-    integrity="sha384-lrEq1HGhTfNUyRo2rIX4u0mX683StYgxNWjLV+xj4ZEAahoU4r3eXQNbWotc8eRg" crossorigin="anonymous")
+  //- script#cc-script(defer src="https://cdn.jsdelivr.net/npm/vanilla-cookieconsent@3.0.1/dist/cookieconsent.umd.min.js"
+  //-   integrity="sha384-lrEq1HGhTfNUyRo2rIX4u0mX683StYgxNWjLV+xj4ZEAahoU4r3eXQNbWotc8eRg" crossorigin="anonymous")
 
 block vendors-js
   //--- Vendors main JS
