--- a/src/views/partials/_styles.pug
+++ b/src/views/partials/_styles.pug
@@ -1,8 +1,8 @@
 //- partials/_styles.pug
 block external-css
   //--- Adorade CSS Files, external styles here (cdn)
-  link#cc-style(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vanilla-cookieconsent@3.0.1/dist/cookieconsent.min.css"
-    integrity="sha384-YyHhN2Ewk0v7BuFTekVkDskBJTnWNUI0g6psDeY8B7T9Moc9UCtprbHfgOEcjb6z" crossorigin="anonymous")
+  //- link#cc-style(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vanilla-cookieconsent@3.0.1/dist/cookieconsent.min.css"
+  //-   integrity="sha384-YyHhN2Ewk0v7BuFTekVkDskBJTnWNUI0g6psDeY8B7T9Moc9UCtprbHfgOEcjb6z" crossorigin="anonymous")
 
 block custom-css
   //--- Main Style
